@startuml

title __BOIDS's Class Diagram__\n

  namespace boids {
    class boids.AvoidPlaceRule {
        - height : int
        - places : float[][]
        - viewDistance : float
        - width : int
        + AvoidPlaceRule()
        + apply()
        - rule4()
        - tendToPlace()
    }
  }
  

  namespace boids {
    class boids.Boid {
        - position : float[]
        - speed : float[]
        + Boid()
        + getPosition()
        + getSpeed()
        + setPosition()
        + setSpeed()
        + toString()
    }
  }
  

  namespace boids {
    class boids.BoidDisplay {
        {static} - COLOR_RANGE : Color[]
        - agentGroups : Range[]
        - placesToAvoid : float[][]
        + BoidDisplay()
        + display()
        - getColor()
    }
  }
  

  namespace boids {
    class boids.Generation {
        - boidsList : ArrayList<Boid>
        + Generation()
        + Generation()
        + clone()
        + get()
        + nbAgents()
        + set()
        - generateRandomSpeed()
    }
  }
  

  namespace boids {
    class boids.GenericRule {
        - height : int
        - speedLimit : float
        - viewAngle : float
        - viewDistance : float
        - width : int
        + GenericRule()
        + agentRange()
        + apply()
        + boundPosition()
        + findNeighbors()
        + getHeight()
        + getViewDistance()
        + getWidth()
        + limit_speed()
        + rule1()
        + rule2()
        + rule3()
        - compute_distance()
    }
  }
  

  namespace boids {
    class boids.PredatorRule {
        - height : int
        - width : int
        + PredatorRule()
        + apply()
        + chase()
    }
  }
  

  namespace boids {
    class boids.Triangle {
        - drawColor : Color
        - dx : float
        - dy : float
        - fillColor : Color
        - height : float
        - x : float
        - y : float
        + Triangle()
        + paint()
        + toString()
    }
  }
  

  boids.AvoidPlaceRule -up-|> boids.GenericRule
  boids.BoidDisplay .up.|> agentsystem.IDisplay
  boids.Generation .up.|> agentsystem.IGeneration
  boids.GenericRule .up.|> agentsystem.IRangeRule
  boids.GenericRule o-- util.Range : range
  boids.PredatorRule -up-|> boids.GenericRule
  boids.PredatorRule o-- util.Range : preyRange
  boids.Triangle .up.|> gui.GraphicalElement


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
